--- a/package.json
+++ b/package.json
@@ -8,12 +8,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.5",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "^10.0.0",
+    "postcss": "^8.2.14",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "remark": "^12.0.0",
-    "remark-html": "^12.0.0"
+    "remark-html": "^12.0.0",
+    "tailwindcss": "^2.1.2"
+  },
+  "devDependencies": {
+    "@types/node": "^15.0.2",
+    "@types/react": "^17.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "eslint": "^7.26.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-tailwind": "^0.2.1",
+    "prettier": "^2.2.1",
+    "stylelint-config-recommended": "^5.0.0",
+    "typescript": "^4.2.4"
   }
 }
