add toggle for switching theme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,5 @@ services:
       - ./:/usr/src/app
       - /usr/src/app/node_modules
       - /usr/src/app/.next
+    environment:
+      - CHOKIDAR_USEPOLLING=true
