--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.1",
     "autoprefixer": "^10.2.5",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
