--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.1",
+    "@types/highlight.js": "^10.1.0",
+    "@types/marked": "^2.0.2",
     "autoprefixer": "^10.2.5",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
+    "highlight.js": "^10.7.2",
+    "marked": "^2.0.3",
     "next": "^10.0.0",
     "postcss": "^8.2.14",
     "react": "17.0.1",
