--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/marked": "^2.0.2",
     "autoprefixer": "^10.2.5",
     "date-fns": "^2.11.1",
+    "date-fns-tz": "^1.1.4",
     "gray-matter": "^4.0.2",
     "highlight.js": "^10.7.2",
     "marked": "^2.0.3",
