--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-tailwind": "^0.2.1",
     "prettier": "^2.2.1",
+    "sass": "^1.34.1",
     "stylelint-config-recommended": "^5.0.0",
     "typescript": "^4.2.4"
   }
