--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -5,10 +5,7 @@ on:
     branches:
       - main
   repository_dispatch:
-    types:
-      - update_post
-    branches:
-      - main
+    types: [update_post]
 
 jobs:
   vercel:
