--- a/package.json
+++ b/package.json
@@ -17,31 +17,30 @@
     "gray-matter": "^4.0.2",
     "highlight.js": "^10.7.2",
     "marked": "^2.0.3",
-    "next": "^10.0.0",
+    "next": "^13.4.10",
     "postcss": "^8.2.14",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-icons": "^4.4.0",
-    "remark": "^12.0.0",
-    "remark-html": "^12.0.0",
-    "tailwindcss": "^3.3.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7",
+    "remark-gfm": "^3.0.1",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "@types/node": "^15.0.2",
-    "@types/react": "^17.0.5",
-    "@types/react-icons": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
-    "eslint": "^7.32.0",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwind": "^0.2.1",
-    "prettier": "^2.2.1",
-    "sass": "^1.34.1",
-    "stylelint-config-recommended": "^5.0.0",
-    "typescript": "^4.2.4",
-    "vercel": "^24.1.0"
+    "prettier": "^3.0.0",
+    "sass": "^1.63.6",
+    "stylelint-config-recommended": "^13.0.0",
+    "typescript": "^5.1.6",
+    "vercel": "^31.0.3"
   }
 }
