--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "autoprefixer": "^10.2.5",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
-    "gray-matter": "^4.0.2",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "highlight.js": "^11.8.0",
     "marked": "^5.1.1",
     "next": "^13.4.10",
+    "path": "^0.12.7",
     "postcss": "^8.2.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
