--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Recreate all posts
         shell: bash
         run: |
-          npm install
+          npm install --legacy-peer-deps
           npm run build
       - name: 'Deploy to Vercel'
         uses: amondnet/vercel-action@v20
