--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@types/node": "^20.16.0",
     "@types/react": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^8.3.0",
