--- a/biome.json
+++ b/biome.json
@@ -9,6 +9,9 @@
 		"lineWidth": 80,
 		"attributePosition": "auto"
 	},
+	"files": {
+		"ignore": ["**/node_modules/**"]
+	},
 	"organizeImports": { "enabled": true },
 	"linter": {
 		"enabled": true,
