--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@biomejs/biome": "1.8.3",
     "@types/node": "^20.16.0",
     "@types/react": "^18.2.15",
+    "lefthook": "^1.7.15",
     "sass": "^1.77.8",
     "stylelint-config-recommended": "^14.0.1",
     "typescript": "^5.5.4",
