--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "deploy": "vercel --prod",
-    "lint": "npx @biomejs/biome format --write"
-  },
-  "dependencies": {
-    "@icons-pack/react-simple-icons": "^12.3.0",
-    "@vercel/analytics": "^1.5.0",
-    "autoprefixer": "^10.4.21",
-    "date-fns": "^4.1.0",
-    "date-fns-tz": "^3.2.0",
-    "fs": "^0.0.1-security",
-    "gray-matter": "^4.0.3",
-    "next": "^15.1.6",
-    "path": "^0.12.7",
-    "postcss": "^8.5.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
-    "react-markdown": "^9.0.3",
-    "react-syntax-highlighter": "^15.6.1",
-    "remark-gfm": "^4.0.1",
-    "tailwindcss": "^3.4.17"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/node": "^24.2.1",
-    "@types/react": "^19.0.10",
-    "lefthook": "^1.11.3",
-    "sass": "^1.83.4",
-    "stylelint-config-recommended": "^16.0.0",
-    "typescript": "^5.8.3",
-    "vercel": "^41.4.1"
-  }
+	"name": "my-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"deploy": "vercel --prod",
+		"lint": "npx @biomejs/biome format --write"
+	},
+	"dependencies": {
+		"@icons-pack/react-simple-icons": "^12.3.0",
+		"@vercel/analytics": "^1.5.0",
+		"autoprefixer": "^10.4.21",
+		"date-fns": "^4.1.0",
+		"date-fns-tz": "^3.2.0",
+		"fs": "^0.0.1-security",
+		"gray-matter": "^4.0.3",
+		"next": "^15.1.6",
+		"path": "^0.12.7",
+		"postcss": "^8.5.3",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-icons": "^5.4.0",
+		"react-markdown": "^9.0.3",
+		"react-syntax-highlighter": "^15.6.1",
+		"remark-gfm": "^4.0.1",
+		"tailwindcss": "^3.4.17"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.2.0",
+		"@types/node": "^24.2.1",
+		"@types/react": "^19.0.10",
+		"lefthook": "^1.11.3",
+		"sass": "^1.83.4",
+		"stylelint-config-recommended": "^16.0.0",
+		"typescript": "^5.8.3",
+		"vercel": "^41.4.1"
+	}
 }
