--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@icons-pack/react-simple-icons": "^12.3.0",
+		"@tailwindcss/postcss": "^4.1.12",
 		"@vercel/analytics": "^1.5.0",
 		"autoprefixer": "^10.4.21",
 		"date-fns": "^4.1.0",
